--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,97 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+     Copyright (C) 2018 The MoKee Open Source Project
+
+     This program is free software: you can redistribute it and/or modify
+     it under the terms of the GNU General Public License as published by
+     the Free Software Foundation, either version 3 of the License, or
+     (at your option) any later version.
+
+     This program is distributed in the hope that it will be useful,
+     but WITHOUT ANY WARRANTY; without even the implied warranty of
+     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+     GNU General Public License for more details.
+
+     You should have received a copy of the GNU General Public License
+     along with this program.  If not, see <http://www.gnu.org/licenses/>.
+-->
 <resources>
-    <string name="app_name">MKCenter</string>
+    <string name="app_name">MoKee Center</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">MoKee Open Source</string>
+    <string name="nav_header_subtitle">Android Community Operating System</string>
     <string name="nav_header_desc">Navigation header</string>
+
+    <!-- Action -->
     <string name="action_settings">Settings</string>
+    <string name="action_restore">Restore</string>
+    <string name="action_donation">Donation</string>
+    <string name="action_unlock_features">Unlock Features</string>
+
+    <!-- Nav Main -->
+    <string name="nav_main_forum_title">Forum</string>
+    <string name="nav_main_source_title">Source</string>
+    <string name="nav_main_bug_reports_title">Bug Reports</string>
+    <!-- Nav Social -->
+    <string name="nav_social_title">Social</string>
+    <string name="nav_social_telegram_title">Telegram</string>
+    <string name="nav_social_weibo_title">Weibo</string>
+    <string name="nav_social_google_plus_title">Google+</string>
+    <!-- Nav Contribute -->
+    <string name="nav_contribute_title">Contribute</string>
+    <string name="nav_contribute_code_title">Code</string>
+    <string name="nav_contribute_translate_title">Translate</string>
+
+    <!-- Preference -->
+    <string name="mokee_information_title">Version Info</string>
+    <string name="mokee_version_title">MoKee Version</string>
+    <string name="unique_id_title">Unique ID</string>
+    <string name="last_check_time_title">Last Check</string>
+    <string name="update_settings_title">Update Settings</string>
+    <string name="incremental_updates_title">Incremental updates</string>
+    <string name="incremental_updates_summary">Get incremental updates to save download time and bandwidth</string>
+    <string name="verified_updates_title">Verified updates</string>
+    <string name="verified_updates_summary">Only display updates that are verified by other users</string>
+
+    <string name="unlock_features_title">Unlock features</string>
+    <string name="unlock_features_incremental_updates_title">Donate %d CNY for unlock incremental updates and download full speed.</string>
+    <string name="unlock_features_verified_updates_title">Donate %d CNY for verified updates and remove Google Ads.</string>
+    <string name="unlock_features_all_title">Donate %d CNY for unlock incremental updates, download full speed, verified updates and remove Google Ads.</string>
+    <string name="unlock_features_request_summary">(available after donating %d CNY)</string>
+    <string name="unlock_features_pending_summary">(donated %1$d CNY, available for lifetime after donating %2$d CNY more)</string>
+
+    <string name="update_type_title">Update Type</string>
+    <string name="update_type_release">Release</string>
+    <string name="update_type_history">History</string>
+    <string name="update_type_experimental">Experimental</string>
+    <string name="update_type_nightly">Nightly</string>
+    <string name="update_type_unofficial">Unofficial</string>
+    <string name="update_type_all">All</string>
+
+    <!-- Donation Info -->
+    <string name="donation_record_title">Donation Record</string>
+    <string name="donation_record_without_rank">You donated a total of %1$d CNY.</string>
+    <string name="donation_record_with_rank">You donated a total of %1$d CNY, more than %2$s of donors globally, rank No.%3$d!</string>
+    <string name="donation_record_none">You haven\'t donated</string>
+    <string name="donation_restore_success">The donation record was restored successfully!</string>
+    <string name="donation_restore_failure">Please check your internet connection and try again later.</string>
+    <string name="donation_restore_not_found">No donation record found.</string>
+    <string name="donation_payment_success">Thank you for your donation!</string>
+    <string name="donation_payment_currency" translatable="false">%d CNY</string>
+    <string name="donation_dialog_title">Donate to MoKee Open Source</string>
+    <string name="donation_dialog_message">MoKee Open Source is a purely non-profit project born of hobby and passion. In order to maintain this project, we have to fork out our own money most of the time or rely on donations and advertisements. Your donations can help reduce our financial load and sustain future development!</string>
+    <string name="donation_dialog_message_extra">This option allows you to unlock some specific features, remove the Google Ads in MoKee Center.</string>
+
+    <string name="text_copied">Text copied to clipboard.</string>
+    <string name="unknown">Unknown</string>
+    <string name="never">Never</string>
+    <string name="solution">Solution</string>
+    <string name="faq">Q&amp;A</string>
+    <string name="alipay">AliPay</string>
+    <string name="wechat">WeChat</string>
+    <string name="paypal">PayPal</string>
+    <string name="next">Next</string>
+    <string name="activity_not_found">App isn\'t installed.</string>
+    <string name="payment_not_found">MoKee Payment isn\'t installed.</string>
 </resources>
