--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -82,7 +82,7 @@
     <string name="wechat">微信</string>
     <string name="paypal">贝宝</string>
 
-
+    <string name="updates_check_failed">检查更新失败，请检查您的网络连接并稍后重试。</string>
 
     <string name="text_copied">文本已复制到剪贴板。</string>
     <string name="unknown">未知</string>
